# geminate

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  gemini.db
src/: api.rs  db.rs  main.rs  ui.rs
