[package]
name = "geminate"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
dotenvy = "0.15.7"
gemini-rs = "0.4.2"
termimad = "0.31.2"
tokio = "1.43.0"
uuid = { version = "1.14.0", features = ["v4"] }
dirs = "6.0.0"
rusqlite = "0.34.0"

[[bin]]
name = "geminate"
path = "src/main.rs"
