[package]
name = "geminate"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
dotenvy = "0.15.7"
gemini-rs = "0.4.2"
termimad = "0.31.2"
tokio = "1.43.0"
dirs = "6.0.0"
rusqlite = "0.34.0"
textwrap = "0.16.2"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-scrollview = "0.5.1"

[[bin]]
name = "geminate"
path = "src/main.rs"
